Creates empty links, fixes icon spacing

--- a/website/myAccolades/style.css
+++ b/website/myAccolades/style.css
@@ -33,7 +33,7 @@ canvas {
   position: relative;
   top: 65px;
 }
-#nmsDescript {
+#testScoresDescript {
   position: relative;
   top: 65px;
   left: -160px;
